--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.lance.lance": "https://github.com/yenmoc/lance.git?path=Assets/_Root#2021.4.25-preview3",
+    "com.lance.lance": "https://github.com/yenmoc/lance.git?path=Assets/_Root",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.spriteshape": "5.1.1",
     "com.unity.2d.tilemap": "1.0.0",
@@ -10,7 +10,7 @@
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.7",
     "com.unity.ide.vscode": "1.2.3",
-    "com.unity.purchasing": "2.2.2",
+    "com.unity.purchasing": "3.0.2",
     "com.unity.test-framework": "1.1.24",
     "com.unity.textmeshpro": "3.0.4",
     "com.unity.timeline": "1.4.7",
