--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.spriteshape": "5.1.1",
     "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.addressables": "1.18.4",
     "com.unity.ads": "3.7.1",
     "com.unity.analytics": "3.5.3",
     "com.unity.collab-proxy": "1.3.9",
