--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
-    "com.lance.lance": "https://github.com/yenmoc/lance.git?path=Assets/_Root",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.spriteshape": "6.0.0",
     "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.addressables": "1.16.19",
     "com.unity.ads": "3.7.1",
     "com.unity.analytics": "3.5.3",
     "com.unity.collab-proxy": "1.3.9",
