--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -12,6 +12,7 @@
     "com.unity.ads": "3.7.1",
     "com.unity.analytics": "3.5.3",
     "com.unity.collab-proxy": "1.3.9",
+    "com.unity.device-simulator": "3.0.0-preview",
     "com.unity.ide.rider": "3.0.5",
     "com.unity.ide.visualstudio": "2.0.7",
     "com.unity.ide.vscode": "1.2.3",
