--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.addressables": "1.16.19",
     "com.unity.ads": "3.7.1",
+    "com.unity.ads.ios-support": "1.0.0",
     "com.unity.analytics": "3.5.3",
     "com.unity.collab-proxy": "1.3.9",
     "com.unity.device-simulator": "3.0.0-preview",
