Add new notification

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.google.firebase.analytics": "https://github.com/Gamee-Studio/firebase-analytics.git?path=Assets/_Root#7.0.1",
     "com.google.firebase.app": "https://github.com/Gamee-Studio/firebase-app.git?path=Assets/_Root#7.0.1",
     "com.google.firebase.remote-config": "https://github.com/Gamee-Studio/firebase-remote-config.git?path=Assets/_Root#7.0.1",
+    "com.lance.local-notification": "https://github.com/yenmoc/local-notification.git?path=Assets/_Root",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.spriteshape": "6.0.0",
     "com.unity.2d.tilemap": "1.0.0",
