--- a/Assets/Plugins/Android/mainTemplate.gradle
+++ b/Assets/Plugins/Android/mainTemplate.gradle
@@ -8,10 +8,22 @@
             url "https://maven.google.com"
         }
         maven {
-            url "https://maven.google.com/" // Assets/GoogleMobileAds/Editor/GoogleMobileAdsDependencies.xml:7, Assets/IronSource/Editor/IronSourceSDKDependencies.xml:17, Assets/IronSource/Editor/IronSourceSDKDependencies.xml:25
+            url "https://maven.google.com/" // Assets/GoogleMobileAds/Editor/GoogleMobileAdsDependencies.xml:7, Assets/IronSource/Editor/IronSourceSDKDependencies.xml:17, Assets/IronSource/Editor/IronSourceSDKDependencies.xml:25, Assets/IronSource/Editor/ISAdMobAdapterDependencies.xml:8, Assets/IronSource/Editor/ISAppLovinAdapterDependencies.xml:15, Assets/IronSource/Editor/ISFacebookAdapterDependencies.xml:8, Assets/IronSource/Editor/ISInMobiAdapterDependencies.xml:29, Assets/IronSource/Editor/ISInMobiAdapterDependencies.xml:36, Assets/IronSource/Editor/ISInMobiAdapterDependencies.xml:43, Assets/IronSource/Editor/ISUnityAdsAdapterDependencies.xml:16
         }
         maven {
             url "https://dl.bintray.com/ironsource-mobile/android-sdk/" // Assets/IronSource/Editor/IronSourceSDKDependencies.xml:9
+        }
+        maven {
+            url "https://adcolony.bintray.com/AdColony/" // Assets/IronSource/Editor/ISAdColonyAdapterDependencies.xml:8
+        }
+        maven {
+            url "https://dl.bintray.com/ironsource-mobile/android-adapters/" // Assets/IronSource/Editor/ISAdColonyAdapterDependencies.xml:16, Assets/IronSource/Editor/ISAdMobAdapterDependencies.xml:16, Assets/IronSource/Editor/ISAppLovinAdapterDependencies.xml:8, Assets/IronSource/Editor/ISFacebookAdapterDependencies.xml:16, Assets/IronSource/Editor/ISInMobiAdapterDependencies.xml:8, Assets/IronSource/Editor/ISPangleAdapterDependencies.xml:15, Assets/IronSource/Editor/ISUnityAdsAdapterDependencies.xml:9, Assets/IronSource/Editor/ISVungleAdapterDependencies.xml:16
+        }
+        maven {
+            url "https://jcenter.bintray.com/" // Assets/IronSource/Editor/ISInMobiAdapterDependencies.xml:15, Assets/IronSource/Editor/ISInMobiAdapterDependencies.xml:22, Assets/IronSource/Editor/ISPangleAdapterDependencies.xml:8
+        }
+        maven {
+            url "https://jitpack.io/" // Assets/IronSource/Editor/ISVungleAdapterDependencies.xml:8
         }
         maven {
             url (unityProjectPath + "/Assets/GeneratedLocalRepo/Firebase/m2repository") // Packages/com.google.firebase.app/Firebase/Editor/AppDependencies.xml:22, Packages/com.google.firebase.remote-config/Firebase/Editor/RemoteConfigDependencies.xml:20, Packages/com.google.firebase.analytics/Firebase/Editor/AnalyticsDependencies.xml:18
@@ -28,15 +40,23 @@ apply plugin: 'com.android.library'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 // Android Resolver Dependencies Start
+    implementation 'com.adcolony:sdk:4.2.4' // Assets/IronSource/Editor/ISAdColonyAdapterDependencies.xml:8
     implementation 'com.android.support:appcompat-v7:25.3.1' // Facebook.Unity.Editor.AndroidSupportLibraryResolver.addSupportLibraryDependency
     implementation 'com.android.support:cardview-v7:25.3.1' // Facebook.Unity.Editor.AndroidSupportLibraryResolver.addSupportLibraryDependency
     implementation 'com.android.support:customtabs:25.3.1' // Facebook.Unity.Editor.AndroidSupportLibraryResolver.addSupportLibraryDependency
+    implementation 'com.android.support:customtabs:28.0.0' // Assets/IronSource/Editor/ISInMobiAdapterDependencies.xml:29
+    implementation 'com.android.support:recyclerview-v7:28.0.0' // Assets/IronSource/Editor/ISInMobiAdapterDependencies.xml:43
     implementation 'com.android.support:support-v4:25.3.1' // Facebook.Unity.Editor.AndroidSupportLibraryResolver.addSupportLibraryDependency
+    implementation 'com.android.support:support-v4:28.0.0' // Assets/IronSource/Editor/ISInMobiAdapterDependencies.xml:36
+    implementation 'com.applovin:applovin-sdk:9.14.12' // Assets/IronSource/Editor/ISAppLovinAdapterDependencies.xml:15
+    implementation 'com.bytedance.sdk:pangle-sdk:3.4.1.1' // Assets/IronSource/Editor/ISPangleAdapterDependencies.xml:8
+    implementation 'com.facebook.android:audience-network-sdk:6.2.0' // Assets/IronSource/Editor/ISFacebookAdapterDependencies.xml:8
     implementation 'com.facebook.android:facebook-applinks:[9.0, 10)' // Assets/FacebookSDK/Plugins/Editor/Dependencies.xml:6
     implementation 'com.facebook.android:facebook-core:[9.0, 10)' // Assets/FacebookSDK/Plugins/Editor/Dependencies.xml:5
     implementation 'com.facebook.android:facebook-gamingservices:[9.0, 10)' // Assets/FacebookSDK/Plugins/Editor/Dependencies.xml:9
     implementation 'com.facebook.android:facebook-login:[9.0, 10)' // Assets/FacebookSDK/Plugins/Editor/Dependencies.xml:7
     implementation 'com.facebook.android:facebook-share:[9.0, 10)' // Assets/FacebookSDK/Plugins/Editor/Dependencies.xml:8
+    implementation 'com.google.android.gms:play-services-ads:19.6.0' // Assets/IronSource/Editor/ISAdMobAdapterDependencies.xml:8
     implementation 'com.google.android.gms:play-services-ads:20.0.0' // Assets/GoogleMobileAds/Editor/GoogleMobileAdsDependencies.xml:7
     implementation 'com.google.android.gms:play-services-ads-identifier:17.0.0' // Assets/IronSource/Editor/IronSourceSDKDependencies.xml:17
     implementation 'com.google.android.gms:play-services-base:17.5.0' // Packages/com.google.firebase.app/Firebase/Editor/AppDependencies.xml:17
@@ -47,8 +67,20 @@ dependencies {
     implementation 'com.google.firebase:firebase-common:19.3.1' // Packages/com.google.firebase.app/Firebase/Editor/AppDependencies.xml:13
     implementation 'com.google.firebase:firebase-config:20.0.0' // Packages/com.google.firebase.remote-config/Firebase/Editor/RemoteConfigDependencies.xml:13
     implementation 'com.google.firebase:firebase-config-unity:7.0.1' // Packages/com.google.firebase.remote-config/Firebase/Editor/RemoteConfigDependencies.xml:20
+    implementation 'com.inmobi.monetization:inmobi-ads:9.1.0' // Assets/IronSource/Editor/ISInMobiAdapterDependencies.xml:15
+    implementation 'com.ironsource.adapters:adcolonyadapter:4.3.4' // Assets/IronSource/Editor/ISAdColonyAdapterDependencies.xml:16
+    implementation 'com.ironsource.adapters:admobadapter:4.3.15' // Assets/IronSource/Editor/ISAdMobAdapterDependencies.xml:16
+    implementation 'com.ironsource.adapters:applovinadapter:4.3.21' // Assets/IronSource/Editor/ISAppLovinAdapterDependencies.xml:8
+    implementation 'com.ironsource.adapters:facebookadapter:4.3.23' // Assets/IronSource/Editor/ISFacebookAdapterDependencies.xml:16
+    implementation 'com.ironsource.adapters:inmobiadapter:4.3.8' // Assets/IronSource/Editor/ISInMobiAdapterDependencies.xml:8
+    implementation 'com.ironsource.adapters:pangleadapter:4.3.0' // Assets/IronSource/Editor/ISPangleAdapterDependencies.xml:15
+    implementation 'com.ironsource.adapters:unityadsadapter:4.3.9' // Assets/IronSource/Editor/ISUnityAdsAdapterDependencies.xml:9
+    implementation 'com.ironsource.adapters:vungleadapter:4.3.7' // Assets/IronSource/Editor/ISVungleAdapterDependencies.xml:16
     implementation 'com.ironsource.sdk:mediationsdk:7.0.4.1' // Assets/IronSource/Editor/IronSourceSDKDependencies.xml:9
     implementation 'com.parse.bolts:bolts-android:1.4.0' // Assets/FacebookSDK/Plugins/Editor/Dependencies.xml:4
+    implementation 'com.squareup.picasso:picasso:2.71828' // Assets/IronSource/Editor/ISInMobiAdapterDependencies.xml:22
+    implementation 'com.unity3d.ads:unity-ads:3.6.0' // Assets/IronSource/Editor/ISUnityAdsAdapterDependencies.xml:16
+    implementation 'com.vungle:publisher-sdk-android:6.8.1' // Assets/IronSource/Editor/ISVungleAdapterDependencies.xml:8
 // Android Resolver Dependencies End
 **DEPS**}
 
