--- a/Assets/IronSource/Plugins/Android/IronSource.plugin/AndroidManifest.xml
+++ b/Assets/IronSource/Plugins/Android/IronSource.plugin/AndroidManifest.xml
@@ -15,9 +15,9 @@
         
         <!--As Requiered By Admob please add your App ID-->
 
-        <meta-data
-            android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-8566745611252640~4345746338"/>
+        <!--<meta-data-->
+            <!--android:name="com.google.android.gms.ads.APPLICATION_ID"-->
+            <!--android:value="YOUR_ADMOB_APP_ID"/>-->
 
     </application>
 </manifest>
