--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -17,6 +17,7 @@
     "com.unity.addressables": "1.16.19",
     "com.unity.ads.ios-support": "1.0.0",
     "com.unity.analytics": "3.5.3",
+    "com.unity.cinemachine": "2.6.10",
     "com.unity.collab-proxy": "1.3.9",
     "com.unity.device-simulator": "3.0.0-preview",
     "com.unity.ide.rider": "3.0.5",
