Fix claim top 100

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,4 @@ Assets/StreamingAssets/crashlytics-build.properties
 /Assets/_Temp
 /Assets/_Temp.meta
 /TexturePacker/
+Assets/GeneratedLocalRepo/
