chang logic spin, add effect snow exploxe , change sword

--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,6 @@ Assets/StreamingAssets/crashlytics-build.properties
 /Assets/_Temp.meta
 /TexturePacker/
 Assets/GeneratedLocalRepo/
+
+.fake
+.ionide
