--- a/Assets/Plugins/Android/mainTemplate.gradle
+++ b/Assets/Plugins/Android/mainTemplate.gradle
@@ -26,7 +26,7 @@
             url "https://jitpack.io/" // Assets/IronSource/Editor/ISVungleAdapterDependencies.xml:8
         }
         maven {
-            url (unityProjectPath + "/Assets/GeneratedLocalRepo/Firebase/m2repository") // Packages/com.google.firebase.app/Firebase/Editor/AppDependencies.xml:22, Packages/com.google.firebase.remote-config/Firebase/Editor/RemoteConfigDependencies.xml:20, Packages/com.google.firebase.analytics/Firebase/Editor/AnalyticsDependencies.xml:18
+            url "file:///E:/workspace/tower-war\Assets/GeneratedLocalRepo/Firebase/m2repository" // Packages/com.google.firebase.app/Firebase/Editor/AppDependencies.xml:22, Packages/com.google.firebase.remote-config/Firebase/Editor/RemoteConfigDependencies.xml:20, Packages/com.google.firebase.analytics/Firebase/Editor/AnalyticsDependencies.xml:18
         }
         maven {
             url "https://dl.google.com/dl/android/maven2/" // Assets/GoogleMobileAds/Editor/AdColonyMediationDependencies.xml:8, Assets/GoogleMobileAds/Editor/AppLovinMediationDependencies.xml:8, Assets/GoogleMobileAds/Editor/ChartboostMediationDependencies.xml:8, Assets/GoogleMobileAds/Editor/FacebookMediationDependencies.xml:8, Assets/GoogleMobileAds/Editor/InMobiMediationDependencies.xml:8, Assets/GoogleMobileAds/Editor/UnityMediationDependencies.xml:9, Assets/GoogleMobileAds/Editor/VungleMediationDependencies.xml:8
